# emp-ot

./: .gitignore  CMakeLists.txt  emp-ot.h  emp-ot.vcxproj
emp-ot/: co.h  iterated.h  mextension_kos.h  ot.h
ot/: co.h  ideal.h  iterated.h  mextension_alsz.h  np.h  ot.h  shextension.h
test/: emp-ot-iter_ot.vcxproj  emp-ot-mot.vcxproj  emp-ot-shot.vcxproj  iter_ot.cpp  mot.cpp  shot.cpp
